Fix like button visibility and popup css

--- a/blocks/popup/__container/popup__container.css
+++ b/blocks/popup/__container/popup__container.css
@@ -1,10 +1,14 @@
 .popup__container {
-    position: relative;
-    display: none;
-    height: 100%;
-    width: 100%;
-    background: rgba(0, 0, 0, 0.5);
-    position: fixed;
-    top: 0;
-    z-index: 500;
+    width: 88%;
+    z-index: 600;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: flex-end;
+}
+
+@media screen and (min-width:700px) {
+    .popup__container {
+        width: 33.5%;
+    }
 }
