--- a/blocks/popup/popup.css
+++ b/blocks/popup/popup.css
@@ -1,17 +1,10 @@
 .popup {
-    width: 88%;
+    display: none;
+    height: 100%;
+    width: 100%;
+    background: rgba(0, 0, 0, 0.5);
     position: fixed;
-    left: 50%;
-    top: 50%;
-    transform: translate(-50%, -50%);
+    top: 0;
     z-index: 500;
-    display: flex;
-    flex-direction: column;
-    align-items: flex-end;
-}
 
-@media screen and (min-width:700px) {
-    .popup {
-        width: 33.5%;
-    }
 }
